feat: add getroomchatbyparticipant endpoint
