# docs/swagger.json
@@ -52,6 +52,58 @@
                     }
                 }
             }
+        },
+        "/room_chats": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "roomChat"
+                ],
+                "summary": "get room chat list by participant ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "participant id",
+                        "name": "participant",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "filter session status",
+                        "name": "session_status",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.RoomChatDto"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/http.HttpErrorModel"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/http.HttpErrorModel"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -74,6 +126,9 @@
                     "type": "string"
                 },
                 "replyforChatId": {
+                    "type": "string"
+                },
+                "senderId": {
                     "type": "string"
                 },
                 "sessionId": {
